LU-2104 recovery: don't evict export twice

- class_disconnect_stale_exports() should check exp_failed and
  exclude such exports from being evicted once more.
- in class_fail_export() update obd_stale_clients counter if
  recovery is in progress.
- set obd_no_conn flag in ofd_prepare() like mdt does.
- remove check for obd_no_conn from check_for_clients().

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Change-Id: I439a1edd49a9c51f42df4c423d7c165468a3d38d
Revision-Id: 2